Update XboxGamesUpdater.java